# meteor

./: .gitignore  Cargo.toml  example.env
src/: _wordnet.rs  main.rs  meteor.rs  stemmer.rs  synsets.rs
src/server/: app.py  synsets.py
